--- a/AR Drawing/Base.lproj/Main.storyboard
+++ b/AR Drawing/Base.lproj/Main.storyboard
@@ -42,6 +42,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="draw" destination="TCj-Wz-moi" id="qRI-2S-UhA"/>
                         <outlet property="sceneView" destination="ekm-cz-qq0" id="9U1-b2-FF0"/>
                     </connections>
                 </viewController>
